--- a/package.xml
+++ b/package.xml
@@ -1,24 +1,37 @@
 <?xml version="1.0"?>
-<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
-<package format="3">
+<package format="2">
   <name>mpc4px4</name>
   <version>0.0.1</version>
-  <description>A package for quadrotor modeling and control using Model Predictive Control</description>
+  <description>A package for quadrotor modeling and control using learning-based Model Predictive Control</description>
   <maintainer email="frmbouwe@gmail.com">Franck Djeumou</maintainer>
   <license>GNU Public License</license>
 
-  <exec_depend>rclpy</exec_depend>
-  <exec_depend>px4_msgs</exec_depend>
+  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>catkin_simple</buildtool_depend>
+
+  <build_depend>rospy</build_depend>
+  <build_depend>roscpp</build_depend>
+  <build_depend>mav_trajectory_generation</build_depend>
+  <build_depend>mav_trajectory_generation_ros</build_depend>
+  <build_depend>mav_msgs</build_depend>
+  <build_depend>mav_planning_msgs</build_depend>
+  <build_depend>message_generation</build_depend>
+  <build_depend>trajectory_msgs</build_depend>
+  <build_depend>mavros_msgs</build_depend>
+
+  <exec_depend>rospy</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>trajectory_msgs</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
+  <exec_depend>mavros_msgs</exec_depend>
 
-  <test_depend>ament_copyright</test_depend>
-  <test_depend>ament_flake8</test_depend>
-  <test_depend>ament_pep257</test_depend>
-  <test_depend>python3-pytest</test_depend>
 
+   <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <build_type>ament_python</build_type>
+    <!-- Other tools can request additional information be placed here -->
+
   </export>
 </package>
