--- a/mpc4px4/modelling/iris/iris_prior.yaml
+++ b/mpc4px4/modelling/iris/iris_prior.yaml
@@ -11,7 +11,7 @@ Ixz: 0.0          # Coupling between x and z
 Iyy: 0.025        # Inertia along y -> The actual value is 0.029125
 Iyz: 0.0          # Coupling of rotation between y and z
 Izz: 0.05         # Inertial along z -> The actual value is 0.055225
-conf_I: 5       # Confidence in the Inertia matrix coefficient [0,1]
+conf_I: 1.       # Confidence in the Inertia matrix coefficient [0,1]
 
 # A prior over the drag and thrust constants
 Ct: 0.01           # Thrust coefficient -> This is actually going to be Ct * max_rotor_vel^2
@@ -26,10 +26,10 @@ max_rotor_vel: 1100 # The maximum rotor velocity
 gyro_effect: False
 
 # The motor model for fitting the function
-motor_model: linear # {linear, quadratic, cubic, sigmoid_linear, sigmoid_quad}
+motor_model: cubic # {linear, quadratic, cubic, sigmoid_linear, sigmoid_quad}
 
 # [TOD0]: Enable other configurations
 # This assume X configuration
 Dm_x: 0.13        # (m) Projection of the motor on the body x axis
 Dm_y: 0.2         # (m) Projection of the motor on the body y axis
-conf_Dm: 1.0      # Confidence in the projection of the motors on the axis [0,1]
+conf_Dm: 0.8      # Confidence in the projection of the motors on the axis [0,1]
