--- a/launch/iris_sitl_posctrl_mpc.yaml
+++ b/launch/iris_sitl_posctrl_mpc.yaml
@@ -1,41 +1,39 @@
 # Directory to the learned model parameters
-learned_model_params: ~/Documents/sde4mbrl/sde4mbrlExamples/rotor_uav/iris_sitl/my_models/test_iris_sde.pkl
-# trajectory_path: ~/Documents/sde4mbrl/sde4mbrlExamples/rotor_uav/iris_sitl/my_data/test_traj_gen.csv
+learned_model_params: ~/Documents/sde4mbrl/sde4mbrlExamples/rotor_uav/iris_sitl/my_models/iris_sitl_sde.pkl
+
 input_constr:
   # pwm_1, pwm_2, pwm_3, pwm_4
   input_id: [0, 1, 2, 3]
-  input_bound: [[0., 1.], [0.,1.], [0., 1.], [0., 1.]]
+  input_bound: [[1.0e-4, 1.], [1.0e-4,1.], [1.0e-4, 1.], [1.0e-4, 1.]]
 
 # Enforce the control inputs bound during learning value function
 enforce_ubound: True
 
-
-state_constr:
-  # It represents the indexes of the constrained state variables
-  state_id: [3, 4, 5, 10, 11, 12]
-  # Penalty term for the slack variables
-  state_penalty: [0.1, 0.1, 60.0, 0.1, 0.1, 0.1] # 0.1
-  # slack constraints
-  # Set of min max values for the slack id above
-  state_bound: [[-0.3, 0.3], [-0.3, 0.3], [-0.3, 0.3], [-1.2, 1.2], [-1.2, 1.2], [-0.7, 0.7]] #.inf, -.inf
-  # Enforce bound constraints via proximal ?
-  # Doing so augment the number of variables of the problem by the number of
-  # slack constraints
-  slack_proximal: True
-
+# state_constr:
+#   # It represents the indexes of the constrained state variables
+#   state_id: [3, 4, 5, 10, 11, 12]
+#   # Penalty term for the slack variables
+#   state_penalty: [10.0, 10.0, 20.0, 10.0, 10.0, 10.0] # 0.1
+#   # slack scaling and constraints
+#   # Set of min max values for the slack id above
+#   slack_scaling: [3.0, 3.0, 3.0, 3.0, 3.0, 3.0]
+#   state_bound: [[-0.5, 0.5], [-0.5, 0.5], [-0.4, 0.7], [-0.8, 0.8], [-0.8, 0.8], [-0.7, 0.7]] #.inf, -.inf
+#   # Enforce bound constraints via proximal ?
+#   # Doing so augment the number of variables of the problem by the number of
+#   # slack constraints
+#   slack_proximal: False
+#   constr_pen: 0.1
 
 cost_params:
   uref: [0.71, 0.71, 0.71, 0.71]
-  uerr: 5 # Motors penalization coefficient
-  perr: [20.0, 20.0, 80.] # x, y, z, vx, vy, vz
-  # perr_sig: [1.0, 1.0, 5.0]
-  verr: [10, 10, 2.0]
-  # verr_sig: [0.1, 0.1, 0.1]
-  qerr: [2.0, 2.0, 30] # qx, qy, qz
-  werr: [2.0, 2.0, 2.0]
-  # werr: [500.0, 500.0, 100]
-  # werr_sig: [0.1, 0.1, 0.1]
-
+  uerr: 0.01 # m1, m2, m3, m4 1.0
+  perr: [20., 20., 50.] # x, y, z
+  verr: [5.0, 5.0, 5.0] # vx, vy, vz
+  qerr: [0.1, 0.1, 20] # qx, qy, qz
+  werr: [3.0, 3.0, 3.0] # wx, wy, wz
+  # res_sig: [0, 0.1]
+  res_mult: 0.1
+  u_slew_coeff: 0.1
 
 horizon: 20
 num_short_dt: 20
@@ -54,8 +52,8 @@ apg_mpc:
   stepsize: 1.
 
   # The maximum number of gradient updates
-  max_iter: 500
-  max_no_improvement_iter: 500
+  max_iter: 200
+  max_no_improvement_iter: 200
 
   # The adaptive coefficient to scale the momentum. nill values mean
   # that it is not used and rather beta_k = k /(k+3) is used as classical acceleration momentum
@@ -70,7 +68,7 @@ apg_mpc:
   rtol: 1.0e-6
 
   linesearch:
-    max_stepsize: 0.01 # The maximum admissible step size
+    max_stepsize: 0.1 # The maximum admissible step size
     coef: 0.1 # The agressiveness coefficient. The smaller the larger step size in the optimization
     decrease_factor: 0.7 # The decrease factor when performing the armijo linesearch
     increase_factor: 1.5 # The increase factor at each new gradient descent iteration
@@ -79,16 +77,3 @@ apg_mpc:
     # # "increase": attempt to re-use previous stepsize multiplied by increase_factor. Cheap and efficient heuristic.
     reset_option: increase # or conservative
     maxls: 10 # Maximum number of iterations during the line search
-
-
-# sim_scen:
-#   t_init: 0.0
-#   # ['x', 'y', 'z', 'vx', 'vy', 'vz', 'roll', 'pitch', 'yaw', 'wx', 'wy', 'wz']
-#   pos_init: [0.,  0.,   1.0,  0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.]
-#   # init_std: [0.1, 0.1,  0.1,  0.1,  0.1,  0.1,  0.1,  0.1,  0.2,  0.01, 0.01, 0.01]
-#   init_std: [0.0, 0.0,  0.0,  0.0,  0.0,  0.0,  0.0,  0.0,  0.0,  0.0, 0.0, 0.0]
-#   # Target position when no trajectories are given: x, y, z, yaw
-#   pos_goal: [0.0, 0.0, 1.0, 0.0]
-#   # Noise on the goal pos standard deviation from the initial state x, y, z, yaw
-#   pos_goal_std: [0.001, 0.001, 0.001, 0.001]
-#   num_steps: 2000 # This is not used when trajectory are used
