Add new MPC id and more documentation

--- a/scripts/router_sitl.conf
+++ b/scripts/router_sitl.conf
@@ -1,8 +1,10 @@
+# The master node is exchanging data with the PX4 autopilot on port 14540, localhost
 [UdpEndpoint PX4]
 	Mode = Server
 	Address = 127.0.0.1
 	Port = 14540
 
+# Mavros endpoint. Mavros is listening and sending on port 14999 in SITL
 [UdpEndpoint Mavros]
 	Mode = Normal
 	Address = 127.0.0.1
@@ -13,9 +15,10 @@
 	Mode = Normal
 	Address = 127.0.0.1
 	Port = 14998
-	AllowMsgIdIn = 368
-	AllowMsgIdOut = 369
+	AllowMsgIdIn = 368 # MPC_MOTORS_CMD, Message to control the motors
+	AllowMsgIdOut = 367 # MPC_FULL_STATE, Receive Message with full state of the MPC
 
+# General mavlink-router configuration
 [General]
 	TcpServerPort=5760
 	ReportStats=false
