--- a/scripts/router_hexa.conf
+++ b/scripts/router_hexa.conf
@@ -1,18 +1,23 @@
+# The master node is exchanging data with the Autopilot on UART ttyUSB0
 [UartEndpoint PX4]
 	Device = /dev/ttyUSB0
 	Baud = 921600
 
+# A mavros instance is listening on port 14999
+# The IP here corresponds to the IP of the machine running the master node
+# One can have multiple mavros instances listening on different ports and even different machines
 [UdpEndpoint Mavros]
 	Mode = Normal
 	Address = 192.168.1.127
 	Port = 14999
 
+# Resend only the MPC full state for pymavlink listener on port 14998
 [UdpEndpoint MPC]
 	Mode = Normal
 	Address = 192.168.1.127
 	Port = 14998
-	AllowMsgIdIn = 368
-	AllowMsgIdOut = 369
+	AllowMsgIdIn = 368 # MPC_MOTORS_CMD, Message to control the motors
+	AllowMsgIdOut = 367 # MPC_FULL_STATE, Receive Message with full state of the MPC
 
 [General]
 	TcpServerPort=5760
