--- a/scripts/router_hexa.conf
+++ b/scripts/router_hexa.conf
@@ -1,6 +1,6 @@
 # The master node is exchanging data with the Autopilot on UART ttyUSB0
 [UartEndpoint PX4]
-	Device = /dev/ttyACM0
+	Device = /dev/ttyUSB0
 	Baud = 921600
 
 # A mavros instance is listening on port 14999
