--- a/launch/iris_sitl_posctrl_mpc.yaml
+++ b/launch/iris_sitl_posctrl_mpc.yaml
@@ -1,5 +1,7 @@
 # Directory to the learned model parameters
+# learned_model_params: ~/Documents/sde4mbrl/sde4mbrlExamples/rotor_uav/iris_sitl/my_models/iris_sitl_ode_sde.pkl
 learned_model_params: ~/Documents/sde4mbrl/sde4mbrlExamples/rotor_uav/iris_sitl/my_models/iris_sitl_sde.pkl
+# use_sysId_model: True
 
 input_constr:
   # pwm_1, pwm_2, pwm_3, pwm_4
@@ -35,6 +37,24 @@ cost_params:
   # res_sig: [0, 0.1]
   res_mult: 0.01
   u_slew_coeff: 0.1
+  u_slew_constr: [[-18, 0.07], [-26,0.32], [-29, 0.2], [-10, 0.25]]
+  u_slew_constr_coeff: 10.0
+
+# # # Cost for trajectory optimization
+# cost_params:
+#   uref: [0.71, 0.71, 0.71, 0.71]
+#   # uerr: 1 # m1, m2, m3, m4 1.0
+#   perr: 5.31 # x, y, z
+#   verr: 0.6 # vx, vy, vz
+#   qerr: 10 # qx, qy, qz
+#   werr: 0.09 # wx, wy, wz
+#   res_mult: 0.01
+#   u_slew_coeff: 1.0
+
+#   # u_slew_coeff: 0.1 # old * 0.05
+#   u_slew_coeff: 0.001
+#   u_slew_constr: [[-18, 0.07], [-26,0.32], [-29, 0.2], [-10, 0.25]]
+#   u_slew_constr_coeff: 10.0
 
 horizon: 20
 num_short_dt: 20
@@ -43,9 +63,9 @@ short_step_dt: 0.05
 long_step_dt: 0.05
 discount: 1.0
 
-
 # Number of particles when sampling the SDE
 num_particles: 1
+
 
 # Optimizer parameters
 apg_mpc:
@@ -53,8 +73,8 @@ apg_mpc:
   stepsize: 1.
 
   # The maximum number of gradient updates
-  max_iter: 200
-  max_no_improvement_iter: 200
+  max_iter: 100
+  max_no_improvement_iter: 100
 
   # The adaptive coefficient to scale the momentum. nill values mean
   # that it is not used and rather beta_k = k /(k+3) is used as classical acceleration momentum
@@ -70,8 +90,8 @@ apg_mpc:
 
   linesearch:
     init_stepsize: 0.01
-    max_stepsize: 0.1 # The maximum admissible step size
-    coef: 0.1 # The agressiveness coefficient. The smaller the larger step size in the optimization
+    max_stepsize: 10.0 # The maximum admissible step size
+    coef: 0.01 # The agressiveness coefficient. The smaller the larger step size in the optimization
     decrease_factor: 0.7 # The decrease factor when performing the armijo linesearch
     increase_factor: 1.3 # The increase factor at each new gradient descent iteration
     # # The reset strategy at each iteration
@@ -79,3 +99,36 @@ apg_mpc:
     # # "increase": attempt to re-use previous stepsize multiplied by increase_factor. Cheap and efficient heuristic.
     reset_option: increase # or conservative
     maxls: 4 # Maximum number of iterations during the line search
+
+# # Optimizer parameters
+# apg_mpc:
+#   # The intial step size in case no linsearh arguments are provided
+#   stepsize: 1.
+
+#   # The maximum number of gradient updates
+#   max_iter: 200
+#   max_no_improvement_iter: 200
+
+#   # The adaptive coefficient to scale the momentum. nill values mean
+#   # that it is not used and rather beta_k = k /(k+3) is used as classical acceleration momentum
+#   # This value should be between 0 and 1
+#   moment_scale: null
+
+#   # The initial momentum.
+#   beta_init: 0.25
+
+#   # # The stoppng criteria of the algorithm based on gradient norm
+#   atol: 1.0e-8 # The minimum cost difference or 'zero' cost value
+#   rtol: 1.0e-6
+
+#   linesearch:
+#     init_stepsize: 0.01
+#     max_stepsize: 0.1 # The maximum admissible step size
+#     coef: 0.01 # The agressiveness coefficient. The smaller the larger step size in the optimization
+#     decrease_factor: 0.7 # The decrease factor when performing the armijo linesearch
+#     increase_factor: 1.3 # The increase factor at each new gradient descent iteration
+#     # # The reset strategy at each iteration
+#     # # "conservative": re-use previous stepsize, producing a non increasing sequence of stepsizes. Slow convergence.
+#     # # "increase": attempt to re-use previous stepsize multiplied by increase_factor. Cheap and efficient heuristic.
+#     reset_option: increase # or conservative
+#     maxls: 4 # Maximum number of iterations during the line search
